tests/machine/x/fs/group_by_having.error
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/machine/x/fs/group_by_having.fs(27,13): error FS0374: Invalid expression on left of assignment

/workspace/mochi/tests/machine/x/fs/group_by_having.fs(34,5): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (33:23). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/machine/x/fs/group_by_having.fs(34,5): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (33:23). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/machine/x/fs/group_by_having.fs(34,13): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (33:23). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/machine/x/fs/group_by_having.fs(34,13): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (33:23). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/machine/x/fs/group_by_having.fs(34,20): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (33:23). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/machine/x/fs/group_by_having.fs(34,20): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (33:23). Try indenting this token further or using standard formatting conventions.
